force-app/main/default/objects/Rate_Agreement_Scale__c/Rate_Agreement_Scale__c.object-meta.xml
<CustomObject>
    <description>Defines Pay/Charge scale ranking by Job Type &amp; Region. Pay or charge depends on the type of the agreement.</description>
    <label>Rate Agreement Scale</label>
    <nameField>
        <displayFormat>RAS-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Agreement Scales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>