force-app/main/default/objects/Rate_Agreement_Scale__c/fields/Rate_Agreement_Scale_Definition__c.field-meta.xml
<CustomField>
    <fullName>Rate_Agreement_Scale_Definition__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Rate Agreement Scale Definition</label>
    <referenceTo>Rate_Agreement_Scale_Definition__c</referenceTo>
    <relationshipLabel>Rate Agreement Scales</relationshipLabel>
    <relationshipName>Rate_Agreement_Scales</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>