force-app/main/default/objects/Rate_Agreement_Scale__c/fields/Rate_Agreement_Version__c.field-meta.xml
<CustomField>
    <fullName>Rate_Agreement_Version__c</fullName>
    <label>Rate Agreement Version</label>
    <referenceTo>Rate_Agreement_Version__c</referenceTo>
    <relationshipLabel>Rate Agreement Scales</relationshipLabel>
    <relationshipName>Rate_Agreement_Scales</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>